#pragma once
#include "../../Infrastructure/Reservation/FileReservationRepository.hpp"
#include <string>
#include <memory>
#include <vector>

class ReservationManager {
private:
    std::unique_ptr<FileReservationRepository> m_ReservationRepository;

public:
    ReservationManager(std::unique_ptr<FileReservationRepository> &ReservationRepository);

    ~ReservationManager() = default;

    void AddAReservationByPhoneNumber(std::string PhoneNumber);

    void RemoveReservationByPhoneNumber(std::string PhoneNumber);

    std::vector<std::shared_ptr<Reservation> > GetAllReservations() const;

    void SaveReservations(std::string filePath) const;

    void RemoveReservation(std::string phone);

    std::vector<std::shared_ptr<Reservation> > GetReservationsInRange(DateTime from, DateTime to) const;
};
